--- a/AngularCRUD/src/app/app.component.html
+++ b/AngularCRUD/src/app/app.component.html
@@ -17,5 +17,5 @@
   <button style="background-color: greenyellow;" (click)="add()"> Add </button>
   <button style="background-color: salmon;" (click)="update()"> Update </button>
   <button style="background-color: red;" (click)="delete()"> Delete </button>
-  <button style="background-color: blue;" (click)="getById()"> GetById </button>
+  <button style="background-color: aqua;" (click)="getById()"> GetById </button>
 </div>
